# CSGO-memcs-rs

./: README.md
client/: Cargo.toml
client/src/: main.rs  structs.rs
client/src/menu/: mod.rs
core/: Cargo.toml
core/src/: cheat_ctx.rs  lib.rs
core/src/sdk/: error.rs  mod.rs  offset_manager.rs
core/src/sdk/csgo/: clientstate.rs  common.rs  entity.rs  mod.rs  signonstate.rs
core/src/sdk/structs/: global_vars.rs  glow.rs  matrix3x4.rs  mod.rs  player_info.rs  radar_player.rs  vec3.rs
