[package]
name = "memcs-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memflow = "=0.2.0-beta10"
memcs-core = { path = "../core" }
simple_file_logger = "0.3.1"
log = "0.4.19"

# Menu
crossterm = "0.26.1"
tui = { version = "0.19.0", features = ["crossterm"] }