[package]
name = "memcs-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memflow = "=0.2.0-beta10"
dataview = "1.0.1"
toml = "0.7.5"
serde = "1.0.164"
serde_json = "1.0.99"
regex = "1.8.4"
nom = "7.1.3"
libm = "0.2.7"
log = "0.4.19"
simplelog = "0.12.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
thiserror = "1.0.40"
